Add layout with styling and weather static info

--- a/index.html
+++ b/index.html
@@ -23,18 +23,55 @@
         <div class="content">
             <div class="topContent mid">
                 <div class="weatherIcon">
-                    <img src="" alt="Current Weather Conditions">
+                    <img src="./images/weather.svg" alt="Current Weather Conditions">
                 </div>
-                <div class="temp">20&#x2103;</div>
+                <div class="temp"><span>20</span><span id="celsious"><sup>&#9898;</sup></span>
+                    <img src="./images/hot.png" alt="Temperature thermostate">
+                </div>
             </div>
             <div class="midContent mid">
-                <div class="midright"></div>
-                <div class="midleft"></div>
+                <div class="midright">
+                    <div>
+                        <div>City: </div>
+                        <div><span>Rotterdam</span></div>
+                    </div>
+                    <div>
+                        <div>Country: </div>
+                        <div><span>Netherlands</span></div>
+                    </div>
+                    <div>
+                        <div>Region: </div>
+                        <div><span>North Holland</span></div>
+                    </div>
+                </div>
+                <div class="midleft">
+                    <div>Temperature Fahrenheit: <span>71.6°F</span></div>
+                    <div>Condition: <span id="weatherCondition">The weather is Sunny</span></div>
+                    <div>Wind direction: <span>SSW</span></div>
+                </div>
             </div>
             <div class="botContent mid">
-                <div class="top"></div>
-                <div class="middle"></div>
-                <div class="bot"></div>
+                <div class="top">
+                    <div class="topUV">
+                        <img src="./images/sun.png" alt="A sun image">
+                    </div>
+                    <div>UV Index</div>
+                    <div class="botUV"><span>63</span></div>
+                </div>
+                <div class="middle">
+                    <div class="topWind">
+                        <img src="./images/wind.png" alt="A wind image">
+                    </div>
+                    <div>Wind</div>
+                    <div class="botWind"><span>13</span>km/h</div>
+                </div>
+                <div class="bot">
+                    <div class="topHum">
+                        <img src="./images/humidity.png" alt="A raindrop image">
+                    </div>
+                    <div>Humidity</div>
+                    <div class="botHum"><span>88.3</span>%</div>
+                </div>
             </div>
         </div>
         <div class="side sideRight"></div>
