Have working alpha version 1.0

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="weatherIcon">
                     <img src="./images/weather.svg" alt="Current Weather Conditions">
                 </div>
-                <div class="temp"><span>20</span><span id="celsious"><sup>&#9898;</sup></span>
+                <div class="temp"><span id="celciusNum">20</span><span id="celsious"><sup>&#9898;</sup></span>
                     <img src="./images/hot.png" alt="Temperature thermostate">
                 </div>
             </div>
@@ -33,21 +33,21 @@
                 <div class="midright">
                     <div>
                         <div>City: </div>
-                        <div><span>Rotterdam</span></div>
+                        <div><span id="city">Rotterdam</span></div>
                     </div>
                     <div>
                         <div>Country: </div>
-                        <div><span>Netherlands</span></div>
+                        <div><span id="country">Netherlands</span></div>
                     </div>
                     <div>
                         <div>Region: </div>
-                        <div><span>North Holland</span></div>
+                        <div><span id="region">North Holland</span></div>
                     </div>
                 </div>
                 <div class="midleft">
-                    <div>Temperature Fahrenheit: <span>71.6°F</span></div>
+                    <div>Temperature Fahrenheit: <span id="fahrenheitNum">71.6°F</span></div>
                     <div>Condition: <span id="weatherCondition">The weather is Sunny</span></div>
-                    <div>Wind direction: <span>SSW</span></div>
+                    <div>Wind direction: <span id="windDirection">SSW</span></div>
                 </div>
             </div>
             <div class="botContent mid">
@@ -56,21 +56,21 @@
                         <img src="./images/sun.png" alt="A sun image">
                     </div>
                     <div>UV Index</div>
-                    <div class="botUV"><span>63</span></div>
+                    <div class="botUV"><span id="indexUV">63</span></div>
                 </div>
                 <div class="middle">
                     <div class="topWind">
                         <img src="./images/wind.png" alt="A wind image">
                     </div>
                     <div>Wind</div>
-                    <div class="botWind"><span>13</span>km/h</div>
+                    <div class="botWind"><span id="wind">13</span>km/h</div>
                 </div>
                 <div class="bot">
                     <div class="topHum">
                         <img src="./images/humidity.png" alt="A raindrop image">
                     </div>
                     <div>Humidity</div>
-                    <div class="botHum"><span>88.3</span>%</div>
+                    <div class="botHum"><span id="humidity">88.3</span>%</div>
                 </div>
             </div>
         </div>
