--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
 
 <body>
     <nav>
-        <h1>Weatherly</h1>
-        <form action="POSt">
-            <label for="searhBar"></label>
-            <input type="text" id="searchBar" name="searchBar" placeholder="City">
-            <button type="submit" id="searchBtn">Search</button>
-        </form>
+        <div class="navigation">
+            <div id="navTitle">Weather<span id="navTitleHalf">ly</span></div>
+            <form action="POSt">
+                <label for="searhBar"></label>
+                <input type="text" id="searchBar" name="searchBar" placeholder="City">
+                <button type="submit" id="searchBtn"><img id="loupe" src="./images/search.svg"
+                        alt="search loupe"></button>
+            </form>
+        </div>
     </nav>
     <div class="main">
         <div class="side sideLeft"></div>
         <div class="content">
             <div class="topContent mid">
                 <div class="weatherIcon">
-                    <img src="./images/weather.svg" alt="Current Weather Conditions">
+                    <img id="weatherIcon2" src="./images/weather.svg" alt="Current Weather Conditions">
                 </div>
                 <div class="temp"><span id="celciusNum">20</span><span id="celsious"><sup>&#9898;</sup></span>
                     <img src="./images/hot.png" alt="Temperature thermostate">
@@ -45,7 +48,7 @@
                     </div>
                 </div>
                 <div class="midleft">
-                    <div>Temperature Fahrenheit: <span id="fahrenheitNum">71.6°F</span></div>
+                    <div>Temperature Fahrenheit: <span><span id="fahrenheitNum">71.6</span>°F</span></div>
                     <div>Condition: <span id="weatherCondition">The weather is Sunny</span></div>
                     <div>Wind direction: <span id="windDirection">SSW</span></div>
                 </div>
