Add metric slider

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                 <button type="submit" id="searchBtn"><img id="loupe" src="./images/search.svg"
                         alt="search loupe"></button>
             </form>
+            <div class="switchContainer">Metric
+                <label class="switch" for="checkbox">
+                    <input type="checkbox" id="checkbox" name="checkbox" />
+                    <div class="slider round"></div>
+                </label> Other stuff
+            </div>
         </div>
     </nav>
     <div class="main">
