Add switch between metric and imperial units

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     </div>
                 </div>
                 <div class="midleft">
-                    <div>Temperature Fahrenheit: <span><span id="fahrenheitNum">71.6</span>°F</span></div>
+                    <div>Temperature Fahrenheit: <span><span id="fahrenheitNum">71.6</span><span
+                                id="fahrenUnit">°F</span></span></div>
                     <div>Condition: <span id="weatherCondition">The weather is Sunny</span></div>
                     <div>Wind direction: <span id="windDirection">SSW</span></div>
                 </div>
@@ -72,7 +73,7 @@
                         <img src="./images/wind.png" alt="A wind image">
                     </div>
                     <div>Wind</div>
-                    <div class="botWind"><span id="wind">13</span>km/h</div>
+                    <div class="botWind"><span id="wind">13</span><span id="windUnit">km/h</span></div>
                 </div>
                 <div class="bot">
                     <div class="topHum">
