have complete working beta version 3.0

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="midleft">
-                    <div>Temperature Fahrenheit: <span><span id="fahrenheitNum">71.6</span><span
+                    <div><span id="fText">Temperature Fahrenheit:</span><span><span id="fahrenheitNum">71.6</span><span
                                 id="fahrenUnit">°F</span></span></div>
                     <div>Condition: <span id="weatherCondition">The weather is Sunny</span></div>
                     <div>Wind direction: <span id="windDirection">SSW</span></div>
