Add empty search security

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
         </div>
         <div class="side sideRight"></div>
     </div>
-    <footer>©2023 | Jonathan Louisa</footer>
+    <footer>©2023 | <a href="https://github.com/JLouisa/weather-app" target="_blank"><img src="./images/GitHub_Logo.png"
+                alt="Github logo"></a> | Jonathan
+        Louisa</footer>
 </body>
 
 </html>
